# example_api

./: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr-checks.yml
book_api/: app.py  db.py  exceptions.py  fastapi_app.py  flask_app.py  models.py  repo.py  routes.py  schemas.py  service.py
py_api/: app.py  db.py  main.py  models.py  schemas.py
request_collection/: Create Book.bru  Delete Book.bru  Get Book.bru  Get Books.bru  Health Check.bru  bruno.json
request_collection/FastApi/: Create Book.bru  Delete Book.bru  Get Book.bru  Get Books.bru  Health Check.bru
tests/: conftest.py  stub_repo.py  test_fastapi_app.py  test_flask_app.py  test_schema.py  test_service.py
