[project]
name = "book_api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.0"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "C", "B", "W"]
