[project]
name = "book_api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
 "pytest>=8.3.5",
 "pytest-cov>=6.0.0",
 "ruff>=0.11.0",
]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "C", "B", "W"]
